--- a/options.html
+++ b/options.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+  <h1>Replacerator Rules</h1>
+
   <table id="rules">
     <tr id="add-rule">
       <td><input type="text" placeholder="from" class="from" /></td>
