--- a/options.html
+++ b/options.html
@@ -35,7 +35,6 @@
         <td>
           <input id="to-text" type="text" placeholder="to" />
           <div id="to-js" class="hidden"></div>
-          <div class="note code-warning hidden">(may make browsing noticeably slower)</span>
         </td>
         <td>
           <i class="add-button fa fa-floppy-o"></i>
@@ -44,6 +43,8 @@
     </table>
   </div>
  
+  <p>Disclaimer: Replacerator only runs on pageload, and is not guaranteed to cover dynamically loaded content.</p>
+
   <div class="section">
     <h1>Export / Import</h1>
     <div>
