add back case insensitivity

--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-<p>(cloud-to-butt) cloud fcloud <b>cloud</b> Cloud</p>
+<p>(cloud-to-butt) the cloud fcloud <b>the cloud</b> The cloud</p>
 
 <p>(political-correctness) political correctness <b>political correctness</b></p>
 <p>Political correctness</p>
