rm unit converter from default but let it load as an extra option

--- a/options.html
+++ b/options.html
@@ -56,6 +56,13 @@
         <i class="fa fa-recycle"></i> Replace rules</button>
     </div>
     <textarea id="rules-json"></textarea>
+
+    <h2>Extras</h2>
+    <div>
+      <button class="button add-extras" data-extra-id="cm_to_in">
+        Cm-to-inch converter
+      </button>
+    </div>
   </div>
 
 </body>
